# ROS2_CPP

./: .gitignore  README.md
ros2_cpp_ws/install/: local_setup.sh  setup.sh
ros2_cpp_ws/install/udemy_ros2_pkg/include/udemy_ros2_pkg/udemy_ros2_pkg/msg/: rosidl_generator_c__visibility_control.h  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
ros2_cpp_ws/install/udemy_ros2_pkg/include/udemy_ros2_pkg/udemy_ros2_pkg/srv/: image_from_angle.h  image_from_angle.hpp  odd_even_check.h  odd_even_check.hpp
ros2_cpp_ws/install/udemy_ros2_pkg/include/udemy_ros2_pkg/udemy_ros2_pkg/srv/detail/: image_from_angle__builder.hpp  image_from_angle__functions.h  image_from_angle__rosidl_typesupport_fastrtps_c.h  image_from_angle__rosidl_typesupport_fastrtps_cpp.hpp  image_from_angle__rosidl_typesupport_introspection_c.h  image_from_angle__rosidl_typesupport_introspection_cpp.hpp  (+14 more)
ros2_cpp_ws/install/udemy_ros2_pkg/lib/udemy_ros2_pkg/: camera_client  camera_service  publisher  rpm_pub  service_client  service_server  speed_calculation  subscriber
ros2_cpp_ws/install/udemy_ros2_pkg/share/ament_index/resource_index/package_run_dependencies/: udemy_ros2_pkg
ros2_cpp_ws/install/udemy_ros2_pkg/share/ament_index/resource_index/parent_prefix_path/: udemy_ros2_pkg
ros2_cpp_ws/install/udemy_ros2_pkg/share/ament_index/resource_index/rosidl_interfaces/: udemy_ros2_pkg
ros2_cpp_ws/install/udemy_ros2_pkg/share/udemy_ros2_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_cpp_ws/install/udemy_ros2_pkg/share/udemy_ros2_pkg/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  udemy_ros2_pkgConfig-version.cmake  udemy_ros2_pkgConfig.cmake
ros2_cpp_ws/install/udemy_ros2_pkg/share/udemy_ros2_pkg/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
ros2_cpp_ws/install/udemy_ros2_pkg/share/udemy_ros2_pkg/launch/: rpm_node.launch.py
ros2_cpp_ws/install/udemy_ros2_pkg/share/udemy_ros2_pkg/srv/: ImageFromAngle.idl  ImageFromAngle.srv  ImageFromAngle_Request.msg  ImageFromAngle_Response.msg  OddEvenCheck.idl  OddEvenCheck.srv  OddEvenCheck_Request.msg  OddEvenCheck_Response.msg
ros2_cpp_ws/log/: latest_build  latest_list
ros2_cpp_ws/src/udemy_ros2_pkg/: CMakeLists.txt  package.xml
ros2_cpp_ws/src/udemy_ros2_pkg/action/: Navigate.action
ros2_cpp_ws/src/udemy_ros2_pkg/launch/: rpm_node.launch.py  wheeled_model_simulation.launch.py
ros2_cpp_ws/src/udemy_ros2_pkg/models/ground_plane/: ground_plane.sdf  model.config
ros2_cpp_ws/src/udemy_ros2_pkg/src/: action_client.cpp  action_server.cpp  camera_client.cpp  camera_service.cpp  pub_sub_speed.cpp  publisher.cpp  publisher_rpm.cpp  service_client.cpp  service_server.cpp  subscriber.cpp
ros2_cpp_ws/src/udemy_ros2_pkg/srv/: ImageFromAngle.srv
ros2_cpp_ws/src/udemy_ros2_pkg/worlds/: test_world.sdf  wheeled_model_world.sdf
(+13 files in other folders)
